--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,11 @@
   "fileConfigs": [
     {
       "path": "scss/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/work.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/work.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
@@ -137,7 +141,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"css/style.css\",\"relative\":\"/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"relative\":\"/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
