--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,22 @@
     {
       "path": "scss/work.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/work.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/about.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/about.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "css/about.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "scss/workflow.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/workflow.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/news.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
