--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,10 +29,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "css",
-      "scss"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -47,7 +44,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
