--- a/prepros-6.config
+++ b/prepros-6.config
@@ -44,7 +44,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
